Added MATLAB entry and updated dates for scipy, pandas and statsmodels

--- a/master1.bib
+++ b/master1.bib
@@ -819,26 +819,34 @@ publisher={Elsevier}
 @misc{scipy,
 author = {Eric Jones and Travis Oliphant and Pearu Peterson and others},
 title = {{SciPy}: Open source scientific tools for {Python}},
-year ={2001--2011},
+year ={2001--2012},
 url = "http://www.scipy.org/"
 }
 @misc{numpy,
 author = {Travis Oliphant and others},
 title = {{Numpy}: Open source scientific tools for {Python}},
-year ={2005--2011},
+year ={2005--2012},
 url = "http://www.numpy.org/"
 }
 @misc{pandas,
 author = {Wes McKinney},
 title = {{pandas}: powerful {Python} data analysis toolkit},
-year ={2005--2011},
+year ={2005--2012},
 url = "http://pandas.sourceforge.net/"
 }
 @misc{statsmodels,
 author = {Perktold, J. and Seabold, S. and Mckinney, W.},
 title = {{statsmodels}: Statistics in {Python}},
-year ={2006--2011},
+year ={2006--2012},
 url = "http://statsmodels.sourceforge.net/"
+}
+
+@book{MATLAB:2012,
+year = {2012},
+author = {MATLAB},
+title = {version 8.0 (R2012b)},
+publisher = {The MathWorks Inc.},
+address = {Natick, Massachusetts}
 }
 
 @article{litterman1991common,
