Changed matlab ref

--- a/master1.bib
+++ b/master1.bib
@@ -834,6 +834,7 @@ title = {{pandas}: powerful {Python} data analysis toolkit},
 year ={2005--2012},
 url = "http://pandas.sourceforge.net/"
 }
+
 @misc{statsmodels,
 author = {Perktold, J. and Seabold, S. and Mckinney, W.},
 title = {{statsmodels}: Statistics in {Python}},
@@ -841,7 +842,7 @@ year ={2006--2012},
 url = "http://statsmodels.sourceforge.net/"
 }
 
-@book{MATLAB:2012,
+@misc{matlab,
 year = {2012},
 author = {MATLAB},
 title = {version 8.0 (R2012b)},
