Added fisher, nychka, and zervos

--- a/master1.bib
+++ b/master1.bib
@@ -1204,3 +1204,10 @@ address = {Natick, Massachusetts}
   abstract={No abstract is available for this item.},
   keywords={}
 }
+
+@techreport{fisher1995fitting,
+  title={Fitting the term structure of interest rates with smoothing splines},
+  author={Fisher, M. and Nychka, D. and Zervos, D.},
+  year={1995},
+  institution={Board of Governors of the Federal Reserve System (US)}
+}
