Corrected citations after lumsdaine comments

--- a/master1.bib
+++ b/master1.bib
@@ -172,7 +172,7 @@
 }
 
 @Article{ rudebusch2008macro,
-	title = "{A macro-finance model of the Term Structure, Monetary Policy and the Economy*}",
+	title = "{A macro-finance model of the Term Structure, Monetary Policy and the Economy}",
 	author = "G.D. Rudebusch and T. Wu",
 	journal = "The Economic Journal",
 	volume = "118",
@@ -781,7 +781,7 @@ year={2008}
 @article{ang2003no,
 title={A no-arbitrage vector autoregression of term structure dynamics with macroeconomic and latent variables},
 author={Ang, A. and Piazzesi, M.},
-journal={Journal of Monetary economics},
+journal={Journal of Monetary Economics},
 volume={50},
 number={4},
 pages={745--787},
@@ -1042,7 +1042,7 @@ address = {Natick, Massachusetts}
   volume={42},
   number={1},
   pages={33-62},
-  month={02},
+  month={February},
   keywords={},
   abstract={ This article complements the structural New Keynesian macro framework with a no-arbitrage affine term structure model. Whereas our methodology is general, we focus on an extended macro model with unobservable processes for the inflation target and the natural rate of output that are filtered from macro and term structure data. We find that term structure information helps generate large and significant parameters governing the monetary policy transmission mechanism. Our model also delivers strong contemporaneous responses of the entire term structure to various macroeconomic shocks. The inflation target shock dominates the variation in the \&quot;level factor\&quot; whereas monetary policy shocks dominate the variation in the \&quot;slope and curvature factors.\&quot; Copyright (c) 2010 The Ohio State University.},
   url={http://ideas.repec.org/a/mcb/jmoncb/v42y2010i1p33-62.html}
@@ -1160,13 +1160,15 @@ address = {Natick, Massachusetts}
   keywords={Dynamic term structure models; expectations hypothesis; interest rate forecasts; survey data; term p}
 }
 
-@unpublished{duffee2004estimation,
+@article{duffee2012estimation,
   title={Estimation of dynamic term structure models},
-  author={Duffee, G. and Stanton, R.},
-  journal={Manuscript, Haas School of Business},
-  year={2004},
-  pages={1-47},
-  publisher={Citeseer}
+  author={Duffee, Gregory R and Stanton, Richard H},
+  journal={The Quarterly Journal of Finance},
+  volume={2},
+  number={02},
+  year={2012},
+  publisher={World Scientific},
+  pages={1--51}
 }
 
 @TechReport{orphanideswei2010,
