--- a/master1.bib
+++ b/master1.bib
@@ -1232,3 +1232,16 @@ address = {Natick, Massachusetts}
   title={Unconstrained Nonlinear Optimization Algorithms},
   howpublished={\url{http://www.mathworks.com/help/optim/ug/unconstrained-nonlinear-optimization-algorithms.html}}
 }
+@misc{rns,
+  author={Mike Fletcher},
+  title={RunSnake},
+  howpublished={\url{http://www.vrplumber.com/programming/runsnakerun/}}
+}
+@incollection{stock2003has,
+  title={Has the business cycle changed and why?},
+  author={Stock, James H and Watson, Mark W},
+  booktitle={NBER Macroeconomics Annual 2002, Volume 17},
+  pages={159--230},
+  year={2003},
+  publisher={MIT press}
+}
