added references to rich uncertainty and related papers

--- a/master1.bib
+++ b/master1.bib
@@ -596,6 +596,45 @@
 
 \%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%Dissertation\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%
 
+@unpublished{rich2012,
+address = {33 Liberty Street, Federal Reserve Bank of New York, NY 10045-0001},
+author = {Rich, Robert and Song, Joseph and Tracy, Joseph},
+institution = {Federal Reserve Bank of New York},
+pages = {1--48},
+title = {{The Measurement and Behavior of Uncertainty: Evidence from the ECB
+          Survey of Professional Forecasters}},
+year = {2012}
+}
+
+@article{rich2010relationships,
+  title={The relationships among expected inflation, disagreement, and uncertainty: evidence from matched point and density forecasts},
+  author={Rich, Robert and Tracy, Joseph},
+  journal={The Review of Economics and Statistics},
+  volume={92},
+  number={1},
+  pages={200--207},
+  year={2010},
+  publisher={MIT Press}
+}
+
+@misc{zarnowitz1987consensus,
+  title={Consensus and Uncertainty in Economic Prediction},
+  author={Zarnowitz, Victor and Lambros, Louis A},
+  year={1987},
+  publisher={National Bureau of Economic Research Cambridge, Mass., USA}
+}
+
+@article{giordani2003inflation,
+  title={Inflation forecast uncertainty},
+  author={Giordani, Paolo and S{\"o}derlind, Paul},
+  journal={European Economic Review},
+  volume={47},
+  number={6},
+  pages={1037--1059},
+  year={2003},
+  publisher={Elsevier}
+}
+
 @Article{ guvenen2009parsimonious,
   title = "{A parsimonious macroeconomic model for asset pricing}",
   author = "F. Guvenen",
@@ -1145,7 +1184,6 @@ address = {Natick, Massachusetts}
   year={2008},
   publisher={Wiley Online Library}
 }
-
 
 @TechReport{kimorphanides2005,
   author={Kim, Don H. and Orphanides, Athanasios},
