--- a/master1.bib
+++ b/master1.bib
@@ -1283,3 +1283,27 @@ address = {Natick, Massachusetts}
   year={2003},
   publisher={MIT press}
 }
+@techreport{vixcboe,
+  title={The CBOE VOLATILITY INDEX - VIX},
+  author={CBOE},
+  year={2009},
+  institution={Chicago Board Options Exchange, Incorporated}
+}
+
+@article{chun2011expectations,
+  title={Expectations, bond yields, and monetary policy},
+  author={Chun, Albert Lee},
+  journal={Review of Financial Studies},
+  volume={24},
+  number={1},
+  pages={208--247},
+  year={2011},
+  publisher={Soc Financial Studies}
+}
+
+@article{grishchenko2012inflation,
+  title={The Inflation Risk Premium: Evidence from the TIPS Market},
+  author={Grishchenko, Olesya and Huang, Jing-zhi Jay},
+  journal={Available at SSRN 2147016},
+  year={2012}
+}
