--- a/master1.bib
+++ b/master1.bib
@@ -1307,3 +1307,14 @@ address = {Natick, Massachusetts}
   journal={Available at SSRN 2147016},
   year={2012}
 }
+
+@article{fleming1998information,
+  title={Information and volatility linkages in the stock, bond, and money markets},
+  author={Fleming, Jeff and Kirby, Chris and Ostdiek, Barbara},
+  journal={Journal of Financial Economics},
+  volume={49},
+  number={1},
+  pages={111--137},
+  year={1998},
+  publisher={Elsevier}
+}
