--- a/master1.bib
+++ b/master1.bib
@@ -736,8 +736,8 @@ year = {2012}
 @Misc{ fred,
   title = "Federal Reserve Economic Data",
   author = "{Federal Reserve Bank of St. Louis}",
-  month = "9",
-  year = "2011",
+  month = "12",
+  year = "2012",
   howpublished = "\url{http://research.stlouisfed.org/fred2/}"
 }
 
@@ -830,8 +830,8 @@ publisher={Elsevier}
 @Misc{ bls,
   title = "Bureau of Labor Statistics",
   author = "{BLS}",
-  month = "10",
-  year = "2010",
+  month = "12",
+  year = "2012",
   howpublished = "\url{http://www.bls.gov/}"
 }
 @Misc{ bea,
@@ -1317,4 +1317,75 @@ address = {Natick, Massachusetts}
   pages={111--137},
   year={1998},
   publisher={Elsevier}
+}
+
+@article{fama1987information,
+  title={The information in long-maturity forward rates},
+  author={Fama, Eugene F and Bliss, Robert R},
+  journal={The American Economic Review},
+  pages={680--692},
+  year={1987},
+  publisher={JSTOR}
+}
+@misc{crspfbliss,
+  author={CRSP, Center for Research in Security Prices.
+          Graduate School of Business, The University of Chicago},
+  year=2013,
+  title={Fama-Bliss Discount Bonds – Monthly Only},
+  note={Used with permission. All rights reserved.}
+  howpublished={\url{http://www.vrplumber.com/programming/runsnakerun/}}
+}
+@incollection{mankiw2004disagreement,
+  title={Disagreement about inflation expectations},
+  author={Mankiw, N Gregory and Reis, Ricardo and Wolfers, Justin},
+  booktitle={NBER Macroeconomics Annual 2003, Volume 18},
+  pages={209--270},
+  year={2004},
+  publisher={The MIT Press}
+}
+@article{bomberger1996disagreement,
+  title={Disagreement as a Measure of Uncertainty},
+  author={Bomberger, William A},
+  journal={Journal of Money, Credit and Banking},
+  volume={28},
+  number={3},
+  pages={381--392},
+  year={1996},
+  publisher={JSTOR}
+}
+@article{dovern2012disagreement,
+  title={Disagreement among forecasters in G7 countries},
+  author={Dovern, Jonas and Fritsche, Ulrich and Slacalek, Jiri},
+  journal={Review of Economics and Statistics},
+  volume={94},
+  number={4},
+  pages={1081--1096},
+  year={2012},
+  publisher={MIT Press}
+}
+@techreport{diebold2008macroeconomic,
+  title={Macroeconomic volatility and stock market volatility, worldwide},
+  author={Diebold, Francis X and Yilmaz, Kamil},
+  year={2008},
+  institution={National Bureau of Economic Research}
+}
+@article{batchelor1992conservatism,
+  title={Conservatism and consensus-seeking among economic forecasters},
+  author={Batchelor, Roy and Dua, Pami},
+  journal={Journal of Forecasting},
+  volume={11},
+  number={2},
+  pages={169--181},
+  year={1992},
+  publisher={Wiley Online Library}
+}
+@article{mccallum1976rational,
+  title={Rational expectations and the estimation of econometric models: An alternative procedure},
+  author={McCallum, Bennett T},
+  journal={International Economic Review},
+  volume={17},
+  number={2},
+  pages={484--490},
+  year={1976},
+  publisher={JSTOR}
 }
