--- a/master1.bib
+++ b/master1.bib
@@ -1389,3 +1389,29 @@ address = {Natick, Massachusetts}
   year={1976},
   publisher={JSTOR}
 }
+@article{wickens1982efficient,
+  title={The efficient estimation of econometric models with rational expectations},
+  author={Wickens, Michael R},
+  journal={The Review of Economic Studies},
+  volume={49},
+  number={1},
+  pages={55--67},
+  year={1982},
+  publisher={Oxford University Press}
+}
+@article{bloom2009impact,
+  title={The impact of uncertainty shocks},
+  author={Bloom, Nicholas},
+  journal={econometrica},
+  volume={77},
+  number={3},
+  pages={623--685},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+@techreport{adrian2010monetary,
+  title={Monetary cycles, financial cycles, and the business cycle},
+  author={Adrian, Tobias and Estrella, Arturo and Shin, Hyun Song},
+  year={2010},
+  institution={Staff Report, Federal Reserve Bank of New York}
+}
