--- a/master1.bib
+++ b/master1.bib
@@ -1415,3 +1415,13 @@ address = {Natick, Massachusetts}
   year={2010},
   institution={Staff Report, Federal Reserve Bank of New York}
 }
+@article{banerjee1992recursive,
+  title={Recursive and sequential tests of the unit-root and trend-break hypotheses: theory and international evidence},
+  author={Banerjee, Anindya and Lumsdaine, Robin L and Stock, James H},
+  journal={Journal of Business \& Economic Statistics},
+  volume={10},
+  number={3},
+  pages={271--287},
+  year={1992},
+  publisher={Taylor \& Francis}
+}
