--- a/master1.bib
+++ b/master1.bib
@@ -1457,3 +1457,9 @@ address = {Natick, Massachusetts}
   year={2012},
   publisher={Elsevier}
 }
+@article{doh2006moves,
+  title={What moves the yield curve? Lessons from an estimated nonlinear macro model},
+  author={Doh, Taeyoung},
+  journal={manuscript, University of Pennsylvania},
+  year={2006}
+}
