--- a/master1.bib
+++ b/master1.bib
@@ -1409,6 +1409,13 @@ address = {Natick, Massachusetts}
   year={2009},
   publisher={Wiley Online Library}
 }
+@article{baker2013measuring,
+  title={Measuring economic policy uncertainty},
+  author={Baker, Scott and Bloom, Nicholas and Davis, Steven},
+  journal={Chicago Booth Research Paper},
+  number={13-02},
+  year={2013}
+}
 @techreport{adrian2010monetary,
   title={Monetary cycles, financial cycles, and the business cycle},
   author={Adrian, Tobias and Estrella, Arturo and Shin, Hyun Song},
