Updates with real-time paper

--- a/master1.bib
+++ b/master1.bib
@@ -1402,7 +1402,7 @@ address = {Natick, Massachusetts}
 @article{bloom2009impact,
   title={The impact of uncertainty shocks},
   author={Bloom, Nicholas},
-  journal={econometrica},
+  journal={Econometrica},
   volume={77},
   number={3},
   pages={623--685},
@@ -1462,4 +1462,14 @@ address = {Natick, Massachusetts}
   author={Doh, Taeyoung},
   journal={manuscript, University of Pennsylvania},
   year={2006}
+}
+@article{croushore2001real,
+  title={A real-time data set for macroeconomists},
+  author={Croushore, Dean and Stark, Tom},
+  journal={Journal of Econometrics},
+  volume={105},
+  number={1},
+  pages={111--130},
+  year={2001},
+  publisher={Elsevier}
 }
