More additions to bibfile

--- a/master1.bib
+++ b/master1.bib
@@ -741,6 +741,14 @@ year = {2012}
   howpublished = "\url{http://research.stlouisfed.org/fred2/}"
 }
 
+@Misc{ spf,
+  title = "Survey of Professional Forecasters",
+  author = "Federal Reserve Bank of Philadelphia",
+  month = "12",
+  year = "2013",
+  howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/survey-of-professional-forecasters/}"
+}
+
 @Article{ piazzesi2007housing,
   title = "Housing, consumption and asset pricing",
   author = "M. Piazzesi and M. Schneider and S. Tuzel",
@@ -1442,14 +1450,14 @@ address = {Natick, Massachusetts}
 }
 @Misc{greenbook,
   title = "Greenbook Data Sets",
-  author = "{Federal Reserve Bank of Philadelphia}",
+  author = "Federal Reserve Bank of Philadelphia",
   month = "12",
   year = "2013",
   howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/greenbook-data/}"
 }
 @Misc{rtmacro,
   title = "Real-Time Data Set for Macroeconomists",
-  author = "{Federal Reserve Bank of Philadelphia}",
+  author = "Federal Reserve Bank of Philadelphia",
   month = "12",
   year = "2013",
   howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/real-time-data/}"
