Fixed comma issue

--- a/master1.bib
+++ b/master1.bib
@@ -1340,7 +1340,7 @@ address = {Natick, Massachusetts}
           Graduate School of Business, The University of Chicago},
   year=2013,
   title={Fama-Bliss Discount Bonds – Monthly Only},
-  note={Used with permission. All rights reserved.}
+  note={Used with permission. All rights reserved.},
   howpublished={\url{http://www.vrplumber.com/programming/runsnakerun/}}
 }
 @incollection{mankiw2004disagreement,
