--- a/master1.bib
+++ b/master1.bib
@@ -737,7 +737,7 @@ year = {2012}
   title = "Federal Reserve Economic Data",
   author = "{Federal Reserve Bank of St. Louis}",
   month = "12",
-  year = "2012",
+  year = "2013",
   howpublished = "\url{http://research.stlouisfed.org/fred2/}"
 }
 
@@ -866,20 +866,20 @@ publisher={Elsevier}
 @misc{scipy,
 author = {Eric Jones and Travis Oliphant and Pearu Peterson and others},
 title = {{SciPy}: Open source scientific tools for {Python}},
-year ={2001--2012},
+year ={2001--2014},
 url = "http://www.scipy.org/"
 }
 @misc{numpy,
 author = {Travis Oliphant and others},
 title = {{Numpy}: Open source scientific tools for {Python}},
-year ={2005--2012},
+year ={2005--2014},
 url = "http://www.numpy.org/"
 }
 @misc{pandas,
 author = {Wes McKinney},
-title = {{pandas}: powerful {Python} data analysis toolkit},
-year ={2005--2012},
-url = "http://pandas.sourceforge.net/"
+title = {Python Data Analysis Library},
+year ={2005--2014},
+url = "http://pandas.pydata.org/"
 }
 
 @misc{statsmodels,
@@ -1487,4 +1487,13 @@ address = {Natick, Massachusetts}
   pages={111--130},
   year={2001},
   publisher={Elsevier}
+}
+@Manual{rcite,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2012},
+  note = {{ISBN} 3-900051-07-0},
+  url = {http://www.R-project.org/},
 }
