--- a/master1.bib
+++ b/master1.bib
@@ -885,7 +885,7 @@ url = "http://pandas.pydata.org/"
 @misc{statsmodels,
 author = {Perktold, J. and Seabold, S. and Mckinney, W.},
 title = {{statsmodels}: Statistics in {Python}},
-year ={2006--2012},
+year ={2006--2014},
 url = "http://statsmodels.sourceforge.net/"
 }
 
@@ -1496,4 +1496,60 @@ address = {Natick, Massachusetts}
   year = {2012},
   note = {{ISBN} 3-900051-07-0},
   url = {http://www.R-project.org/},
+}
+@PhdThesis{
+        dissch1,
+        title = {An Extension and Replication of \citet{sack2005monetary}},
+        author = "Barton Baker",
+        school = "American University",
+        year = "2014"
+}
+@PhdThesis{
+        dissch2,
+        title = {Real-time data and informing affine models of the term structure},
+        author = "Barton Baker",
+        school = "American University",
+        year = "2014"
+}
+@PhdThesis{
+        dissch3,
+        title = {\emph{affine}, a Python solver class for affine models of the term structure},
+        author = "Barton Baker",
+        school = "American University",
+        year = "2014"
+}
+@Article{PER-GRA:2007,
+  Author    = {P\'erez, Fernando and Granger, Brian E.},
+  Title     = {{IP}ython: a System for Interactive Scientific Computing},
+  Journal   = {Computing in Science and Engineering},
+  Volume    = {9},
+  Number    = {3},
+  Pages     = {21--29},
+  month     = may,
+  year      = 2007,
+  url       = "http://ipython.org",
+  ISSN      = "1521-9615",
+  doi       = {10.1109/MCSE.2007.53},
+  publisher = {IEEE Computer Society},
+}
+@article{chenscott1993,
+title={Maximum likelihood estimation for a multi-factor equilibrium model of the term structure of interest rates},
+author={Chen, R.R. and Scott, L.},
+journal={Journal of Fixed Income},
+volume={3},
+pages={14--31},
+year={1993},
+}
+@book{hamilton1994time,
+  title={Time series analysis},
+  author={Hamilton, James Douglas},
+  volume={2},
+  year={1994},
+  publisher={Cambridge Univ Press}
+}
+@misc{rsr,
+author = {Fletcher, M},
+title = {{RunSnakeRun}: GUI Viewer for Python profiling runs},
+year ={2001--2013},
+url = "http://www.vrplumber.com/programming/runsnakerun/"
 }
