--- a/master1.bib
+++ b/master1.bib
@@ -1553,3 +1553,34 @@ title = {{RunSnakeRun}: GUI Viewer for Python profiling runs},
 year ={2001--2013},
 url = "http://www.vrplumber.com/programming/runsnakerun/"
 }
+@Manual{statacite,
+  title = {Stata Statistical Software: Release 13},
+  author = {StataCorp},
+  address = {College Station, Texas},
+  year = {2013},
+  url = {http://www.stata.com/},
+}
+@BOOK{laug,
+      AUTHOR = {Anderson, E. and Bai, Z. and Bischof, C. and
+                Blackford, S. and Demmel, J. and Dongarra, J. and
+                Du Croz, J. and Greenbaum, A. and Hammarling, S. and
+                McKenney, A. and Sorensen, D.},
+      TITLE = {{LAPACK} Users' Guide},
+      EDITION = {Third},
+      PUBLISHER = {Society for Industrial and Applied Mathematics},
+      YEAR = {1999},
+      ADDRESS = {Philadelphia, PA},
+      ISBN = {0-89871-447-8 (paperback)} 
+}
+@ARTICLE{whaley04,
+AUTHOR = "R. Clint Whaley and Antoine Petitet",
+TITLE  = "Minimizing development and maintenance costs in supporting
+          persistently optimized {BLAS}",
+JOURNAL= "Software: Practice and Experience",
+volume = "35",
+number = "2",
+pages  = "101-121",
+month  = "February",
+YEAR   = "2005",
+NOTE           = {\verb+http://www.cs.utsa.edu/~whaley/papers/spercw04.ps+}
+}
