--- a/master1.bib
+++ b/master1.bib
@@ -741,6 +741,15 @@ year = {2012}
   howpublished = "\url{http://research.stlouisfed.org/fred2/}"
 }
 
+@Misc{ nber,
+  title = "National Bureau of Economic Research\: NBER",
+  author = "NBER",
+  location = "Cambridge, MA",
+  month = "12",
+  year = "2013",
+  howpublished = "\url{http://www.nber.org/}"
+}
+
 @Misc{ spf,
   title = "Survey of Professional Forecasters",
   author = "Federal Reserve Bank of Philadelphia",
