Added reference to summing AR coeffs

--- a/master1.bib
+++ b/master1.bib
@@ -1593,3 +1593,13 @@ month  = "February",
 YEAR   = "2005",
 NOTE           = {\verb+http://www.cs.utsa.edu/~whaley/papers/spercw04.ps+}
 }
+@article{andrews1994approximately,
+  title={Approximately median-unbiased estimation of autoregressive models},
+  author={Andrews, Donald WK and Chen, Hong-Yuan},
+  journal={Journal of Business \& Economic Statistics},
+  volume={12},
+  number={2},
+  pages={187--204},
+  year={1994},
+  publisher={Taylor \& Francis}
+}
