Updated some citations

--- a/master1.bib
+++ b/master1.bib
@@ -675,11 +675,11 @@ year = {2012}
   year = "2000"
 }
 
-@Book{ minsky2008stabilizing,
+@Book{ minsky1986stabilizing,
   title = "{Stabilizing an unstable economy}",
   author = "H.P. Minsky",
   isbn = "0071592997",
-  year = "2008",
+  year = "1986",
   publisher = "McGraw Hill Professional"
 }
 
@@ -734,7 +734,7 @@ year = {2012}
 }
 
 @Misc{ fred,
-  title = "Federal Reserve Economic Data",
+  title = "{Federal Reserve Economic Data}",
   author = "{Federal Reserve Bank of St. Louis}",
   month = "12",
   year = "2013",
@@ -742,7 +742,7 @@ year = {2012}
 }
 
 @Misc{ nber,
-  title = "National Bureau of Economic Research\: NBER",
+  title = "{National Bureau of Economic Research}",
   author = "NBER",
   location = "Cambridge, MA",
   month = "12",
@@ -751,8 +751,8 @@ year = {2012}
 }
 
 @Misc{ spf,
-  title = "Survey of Professional Forecasters",
-  author = "Federal Reserve Bank of Philadelphia",
+  title = "{Survey of Professional Forecasters}",
+  author = "{Federal Reserve Bank of Philadelphia}",
   month = "12",
   year = "2013",
   howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/survey-of-professional-forecasters/}"
@@ -1459,14 +1459,14 @@ address = {Natick, Massachusetts}
 }
 @Misc{greenbook,
   title = "Greenbook Data Sets",
-  author = "Federal Reserve Bank of Philadelphia",
+  author = "{Federal Reserve Bank of Philadelphia}",
   month = "12",
   year = "2013",
   howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/greenbook-data/}"
 }
 @Misc{rtmacro,
   title = "Real-Time Data Set for Macroeconomists",
-  author = "Federal Reserve Bank of Philadelphia",
+  author = "{Federal Reserve Bank of Philadelphia}",
   month = "12",
   year = "2013",
   howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/real-time-data/}"
@@ -1508,7 +1508,7 @@ address = {Natick, Massachusetts}
 }
 @PhdThesis{
         dissch1,
-        title = {An Extension and Replication of \citet{sack2005monetary}},
+        title = {An Extension and Replication of Bernanke, Sack, and Reinhart (2005)},
         author = "Barton Baker",
         school = "American University",
         year = "2014"
