--- a/master1.bib
+++ b/master1.bib
@@ -884,6 +884,12 @@ title = {{Numpy}: Open source scientific tools for {Python}},
 year ={2005--2014},
 url = "http://www.numpy.org/"
 }
+@misc{numpyextend,
+author = {Travis Oliphant and others},
+title = {How to extend NumPy},
+year ={2014},
+url = "http://docs.scipy.org/doc/numpy/user/c-info.how-to-extend.html"
+}
 @misc{pandas,
 author = {Wes McKinney},
 title = {Python Data Analysis Library},
@@ -974,6 +980,16 @@ address = {Natick, Massachusetts}
   url={http://ideas.repec.org/a/bla/jfinan/v55y2000i5p1943-1978.html}
 }
 
+@article{dai2002expectation,
+  title={Expectation puzzles, time-varying risk premia, and affine models of the term structure},
+  author={Dai, Qiang and Singleton, Kenneth J},
+  journal={Journal of financial Economics},
+  volume={63},
+  number={3},
+  pages={415--441},
+  year={2002},
+  publisher={Elsevier}
+}
 
 @Article{duffiekan1996,
   author={Darrell Duffie and Rui Kan},
