Added entry for JSZ

--- a/master1.bib
+++ b/master1.bib
@@ -1619,3 +1619,13 @@ NOTE           = {\verb+http://www.cs.utsa.edu/~whaley/papers/spercw04.ps+}
   year={1994},
   publisher={Taylor \& Francis}
 }
+@article{joslin2011new,
+  title={A new perspective on Gaussian dynamic term structure models},
+  author={Joslin, Scott and Singleton, Kenneth J and Zhu, Haoxiang},
+  journal={Review of Financial Studies},
+  volume={24},
+  number={3},
+  pages={926--970},
+  year={2011},
+  publisher={Soc Financial Studies}
+}
