--- a/master1.bib
+++ b/master1.bib
@@ -1629,3 +1629,9 @@ NOTE           = {\verb+http://www.cs.utsa.edu/~whaley/papers/spercw04.ps+}
   year={2011},
   publisher={Soc Financial Studies}
 }
+@techreport{krishnamurthy2011effects,
+  title={The effects of quantitative easing on interest rates: channels and implications for policy},
+  author={Krishnamurthy, Arvind and Vissing-Jorgensen, Annette},
+  year={2011},
+  institution={National Bureau of Economic Research}
+}
