--- a/master1.bib
+++ b/master1.bib
@@ -1635,3 +1635,13 @@ NOTE           = {\verb+http://www.cs.utsa.edu/~whaley/papers/spercw04.ps+}
   year={2011},
   institution={National Bureau of Economic Research}
 }
+@article{wright2011term,
+  title={Term premia and inflation uncertainty: Empirical evidence from an international panel dataset},
+  author={Wright, Jonathan H},
+  journal={The American Economic Review},
+  volume={101},
+  number={4},
+  pages={1514--1534},
+  year={2011},
+  publisher={American Economic Association}
+}
