--- a/master1.bib
+++ b/master1.bib
@@ -1558,7 +1558,7 @@ address = {Natick, Massachusetts}
   publisher = {IEEE Computer Society},
 }
 @article{chenscott1993,
-title={Maximum likelihood estimation for a multi-factor equilibrium model of the term structure of interest rates},
+title={Maximum likelihood estimation for a multifactor equilibrium model of the term structure of interest rates},
 author={Chen, R.R. and Scott, L.},
 journal={Journal of Fixed Income},
 volume={3},
@@ -1644,4 +1644,14 @@ NOTE           = {\verb+http://www.cs.utsa.edu/~whaley/papers/spercw04.ps+}
   pages={1514--1534},
   year={2011},
   publisher={American Economic Association}
+}
+@article{pearson1994exploiting,
+  title={Exploiting the conditional density in estimating the term structure: An application to the Cox, Ingersoll, and Ross model},
+  author={Pearson, Neil D and SUN, TONG-SHENG},
+  journal={The Journal of Finance},
+  volume={49},
+  number={4},
+  pages={1279--1304},
+  year={1994},
+  publisher={Wiley Online Library}
 }
