--- a/master1.bib
+++ b/master1.bib
@@ -1655,3 +1655,13 @@ NOTE           = {\verb+http://www.cs.utsa.edu/~whaley/papers/spercw04.ps+}
   year={1994},
   publisher={Wiley Online Library}
 }
+@article{bai1998testing,
+  title={Testing for and dating common breaks in multivariate time series},
+  author={Bai, Jushan and Lumsdaine, Robin L and Stock, James H},
+  journal={The Review of Economic Studies},
+  volume={65},
+  number={3},
+  pages={395--432},
+  year={1998},
+  publisher={Oxford University Press}
+}
