Clean ups to older entries

--- a/master1.bib
+++ b/master1.bib
@@ -168,7 +168,7 @@
   author = "A. Zezza G. Shaikh and C. {Dos Santos}",
   institution = "Levy Institute",
   year = "2003",
-  url = "http://www.levyinstitute.org/files/download.php?file=pn03_6.pdf&pubid=548"
+  note = "\url{http://www.levyinstitute.org/files/download.php?file=pn03_6.pdf&pubid=548}"
 }
 
 @Article{ rudebusch2008macro,
@@ -816,7 +816,7 @@ year = {2012}
   year={2011}
 }
 @Article{diebold2006macroeconomy,
-  author={Diebold, Francis X. and Rudebusch, Glenn D. and Borag[caron]an Aruoba, S.},
+  author={Diebold, Francis X. and Rudebusch, Glenn D. and Bora{\v g}an Aruoba, S.},
   title={The macroeconomy and the yield curve: a dynamic latent factor approach},
   journal={Journal of Econometrics},
   year=2006,
@@ -876,38 +876,38 @@ publisher={Elsevier}
 author = {Eric Jones and Travis Oliphant and Pearu Peterson and others},
 title = {{SciPy}: Open source scientific tools for {Python}},
 year ={2001--2014},
-url = "http://www.scipy.org/"
+note = "\url{http://www.scipy.org/}"
 }
 @misc{numpy,
 author = {Travis Oliphant and others},
 title = {{Numpy}: Open source scientific tools for {Python}},
 year ={2005--2014},
-url = "http://www.numpy.org/"
+note = "\url{http://www.numpy.org/}"
 }
-@misc{numpyextend,
+@ONLINE{numpyextend,
 author = {Travis Oliphant and others},
 title = {How to extend NumPy},
 year ={2014},
-url = "http://docs.scipy.org/doc/numpy/user/c-info.how-to-extend.html"
+note = "\url{http://docs.scipy.org/doc/numpy/user/c-info.how-to-extend.html}"
 }
 @misc{pandas,
 author = {Wes McKinney},
 title = {Python Data Analysis Library},
 year ={2005--2014},
-url = "http://pandas.pydata.org/"
+note = "\url{http://pandas.pydata.org/}"
 }
 
 @misc{statsmodels,
 author = {Perktold, J. and Seabold, S. and Mckinney, W.},
 title = {{statsmodels}: Statistics in {Python}},
 year ={2006--2014},
-url = "http://statsmodels.sourceforge.net/"
+note = "\url{http://statsmodels.sourceforge.net/}"
 }
 
 @misc{matlab,
 year = {2012},
 author = {MATLAB},
-title = {version 8.0 (R2012b)},
+title = {Version 8.0 (R2012b)},
 publisher = {The MathWorks Inc.},
 address = {Natick, Massachusetts}
 }
@@ -983,7 +983,7 @@ address = {Natick, Massachusetts}
 @article{dai2002expectation,
   title={Expectation puzzles, time-varying risk premia, and affine models of the term structure},
   author={Dai, Qiang and Singleton, Kenneth J},
-  journal={Journal of financial Economics},
+  journal={Journal of Financial Economics},
   volume={63},
   number={3},
   pages={415--441},
@@ -1301,12 +1301,12 @@ address = {Natick, Massachusetts}
 @misc{matlab:uncon,
   author={MATLAB},
   title={Unconstrained Nonlinear Optimization Algorithms},
-  howpublished={\url{http://www.mathworks.com/help/optim/ug/unconstrained-nonlinear-optimization-algorithms.html}}
+  note={\url{http://www.mathworks.com/help/optim/ug/unconstrained-nonlinear-optimization-algorithms.html}}
 }
 @misc{rns,
   author={Mike Fletcher},
   title={RunSnake},
-  howpublished={\url{http://www.vrplumber.com/programming/runsnakerun/}}
+  note={\url{http://www.vrplumber.com/programming/runsnakerun/}}
 }
 @incollection{stock2003has,
   title={Has the business cycle changed and why?},
@@ -1366,7 +1366,7 @@ address = {Natick, Massachusetts}
   year=2013,
   title={Fama-Bliss Discount Bonds – Monthly Only},
   note={Used with permission. All rights reserved.},
-  howpublished={\url{http://www.vrplumber.com/programming/runsnakerun/}}
+  note={\url{http://www.vrplumber.com/programming/runsnakerun/}}
 }
 @incollection{mankiw2004disagreement,
   title={Disagreement about inflation expectations},
@@ -1519,8 +1519,7 @@ address = {Natick, Massachusetts}
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
   year = {2012},
-  note = {{ISBN} 3-900051-07-0},
-  url = {http://www.R-project.org/},
+  note = {{ISBN} 3-900051-07-0, \url{http://www.R-project.org/}},
 }
 @PhdThesis{
         dissch1,
@@ -1566,24 +1565,24 @@ pages={14--31},
 year={1993},
 }
 @book{hamilton1994time,
-  title={Time series analysis},
+  title={Time Series Analysis},
   author={Hamilton, James Douglas},
-  volume={2},
   year={1994},
-  publisher={Cambridge Univ Press}
+  publisher={Princeton University Press},
+  address={Princeton, New Jersey},
 }
 @misc{rsr,
 author = {Fletcher, M},
 title = {{RunSnakeRun}: GUI Viewer for Python profiling runs},
 year ={2001--2013},
-url = "http://www.vrplumber.com/programming/runsnakerun/"
+note = "\url{http://www.vrplumber.com/programming/runsnakerun/}"
 }
 @Manual{statacite,
   title = {Stata Statistical Software: Release 13},
   author = {StataCorp},
   address = {College Station, Texas},
   year = {2013},
-  url = {http://www.stata.com/},
+  note = {\url{http://www.stata.com/}},
 }
 @BOOK{laug,
       AUTHOR = {Anderson, E. and Bai, Z. and Bischof, C. and
