Added cython and kcachegrind

--- a/master1.bib
+++ b/master1.bib
@@ -904,6 +904,14 @@ year ={2006--2014},
 note = "\url{http://statsmodels.sourceforge.net/}"
 }
 
+@misc{cython,
+author = {Behnel, S. and Bradshaw, R. and Dalcin, L. and Florisson, M. and
+  Makarov, V. and Seljebotn, D.},
+title = {{Cython}: C-Extensions for Python},
+year ={2004},
+note = "\url{http://cython.org/}"
+}
+
 @misc{matlab,
 year = {2012},
 author = {MATLAB},
@@ -1663,4 +1671,10 @@ NOTE           = {\verb+http://www.cs.utsa.edu/~whaley/papers/spercw04.ps+}
   pages={395--432},
   year={1998},
   publisher={Oxford University Press}
+}
+@misc{kcachegrind,
+author = {Josef Weidendorfer},
+title = {kcachegrind; Call Graph Viewer},
+year ={2002,2003},
+note = "\url{http://kcachegrind.sourceforge.net/html/Home.html}"
 }
