--- a/master1.bib
+++ b/master1.bib
@@ -227,7 +227,7 @@
 
 @Article{ sack2005monetary,
   title = "{Monetary policy alternatives at the zero bound: An empirical assessment}",
-  author = " B. Bernanke and B. Sack and V. Reinhart",
+  author = " B. Bernanke and V. Reinhart and B. Sack",
   journal = "Brookings Papers on Economic Activity",
   volume = "2004",
   number = "2",
@@ -1531,7 +1531,7 @@ address = {Natick, Massachusetts}
 }
 @PhdThesis{
         dissch1,
-        title = {An Extension and Replication of Bernanke, Sack, and Reinhart (2005)},
+        title = {An Extension and Replication of Bernanke, Reinhart, and Sack(2005)},
         author = "Barton Baker",
         school = "American University",
         year = "2014"
@@ -1677,4 +1677,11 @@ author = {Josef Weidendorfer},
 title = {kcachegrind; Call Graph Viewer},
 year ={2002,2003},
 note = "\url{http://kcachegrind.sourceforge.net/html/Home.html}"
+}
+
+@misc{pyprof2,
+author = {Peter Waller},
+title = {pyprof2calltree},
+year ={2013},
+note = "\url{https://pypi.python.org/pypi/pyprof2calltree}"
 }
